# ml-demo

./: .gitignore  CONTRIBUTING.md  README.md  demo-notes.md  wadm.yaml
actors/image-ui/: Cargo.toml  Makefile  README.md  actor.mk  index.html  wasmcloud.toml
actors/image-ui/src/: lib.rs
actors/imagenetpostprocessor/: Cargo.toml  Makefile  wasmcloud.toml
actors/imagenetpreprocessor/: Cargo.toml  Makefile  actor.mk  wasmcloud.toml
actors/imagenetpreprocrgb8/: Cargo.toml  Makefile  actor.mk  wasmcloud.toml
actors/inferenceapi/: Cargo.toml  Makefile  wasmcloud.toml
actors/inferenceapi/src/: lib.rs
actors/mnistpostprocessor/: Cargo.toml  Makefile
actors/mnistpreprocessor/: Cargo.toml  Makefile
bindle/models/: identity_input_output-signed.toml  mobilenetv1_quant_edgetpu-signed.toml  mobilenetv1_uint8_quant-signed.toml  mobilenetv2-7-signed.toml  mobilenetv2_uint8_quant-signed.toml  models.txt  plus3-signed.toml  resnet152-v2-7-signed.toml  squeezenetv1-1-7-signed.toml
bindle/scripts/: bindle_create.sh  bindle_get_labels.sh  bindle_server_start.sh  bindle_start.sh  bindle_stop.sh  push_bindle.sh
deploy/: Makefile  actor_config.json  checkup.sh  docker-compose.yml  env  keyring.toml  run-demo.sh  run.sh  run_iot_device.sh
interfaces/imagenetpostprocess/rust/: Cargo.toml
interfaces/imagenetpostprocess/rust/src/: imagenet.rs  lib.rs
interfaces/mlinference/rust/: Cargo.toml
interfaces/mlpreprocessing/rust/: Cargo.toml
interfaces/mlpreprocessing/rust/src/: lib.rs  mlpreprocessing.rs
providers/mlinference/: Cargo.toml  Makefile  README.md  provider.mk  unittests.sh
providers/mlinference/src/: bindle_loader.rs  lib.rs  model_loader.rs  settings.rs
providers/mlinference/src/inference/: mod.rs  tflite.rs  tract.rs
providers/mlinference/tests/: mlinference_test.rs
