[package]
name = "ml-mnistpreprocessor"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "ml_mnistpreprocessor"

[dependencies]
futures = "0.3"
form_urlencoded = "1.0"
wasmbus-rpc = "0.14"
wasmcloud-interface-logging = "0.9"
wasmcloud_interface_mlpreprocessing = { path = "../../interfaces/mlpreprocessing/rust" }
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "bmp"]  }

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
