[package]
name = "mlinference"
version = "0.3.2"
edition = "2021"
resolver = "2"

[features]
default = []
tflite = [ "dep:tflite", "edgetpu" ]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.13"
byteorder = "1.4"
log = "0.4"
ndarray = "0.15"
num_enum = "0.5.7"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0"
thiserror  = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing-log = "0.1"
tract-data = "0.17"
tract-linalg = "0.17"
tract-onnx = { version = "0.17" }
tract-tensorflow = { version = "0.17" }
wasmbus-rpc = "0.14"
wasmcloud_interface_mlinference = { version = "0.4", path = "../../interfaces/mlinference/rust" }

# optional features
edgetpu = { git = "https://github.com/Finfalter/edgetpu-rs", rev = "d86f59c", optional=true }
tflite = { git = "https://github.com/Finfalter/tflite-rs", rev = "5c11a15", optional=true }

# test dependencies
[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = [ "full" ] }
wasmcloud-test-util = "0.5"
image = { version = "0.24", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]  }

[lib]
name = "wasmcloud_provider_mlinference"
path = "src/lib.rs"

[[bin]]
name = "mlinference"
path = "bin/main.rs"
